set extract/measure dataloaders to train+val

--- a/src/plot.ipynb
+++ b/src/plot.ipynb
@@ -2,46 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.pyplot import figure\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "color_list = {0: '#1f77b4', 1: '#ff7f0e', 2: '#2ca02c', 3: '#d62728', 4: '#9467bd', 5: '#8c564b', 6: '#e377c2', 7: '#7f7f7f', 8: '#bcbd22', 9: '#17becf', -1: '#000000', -2: '#ff0000'}\n",
-    "features_dir = '../features/'\n"
+    "features_dir = '../features/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ True  True  True ... False False False]\n",
-      "<class 'numpy.ndarray'>\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7faa4798f880>"
+       "<matplotlib.collections.PathCollection at 0x7fd400f0efd0>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -57,9 +49,11 @@
     }
    ],
    "source": [
+    "# Plot data with given mask.\n",
     "data = np.load(f'{features_dir}resnet18_cifar10_mnist_cifar100_tsne.npz')['data']\n",
     "labels = np.load(f'{features_dir}resnet18_cifar10_mnist_cifar100_tsne.npz')['labels']\n",
     "mask = (labels != -1) & (labels != -2)\n",
+    "\n",
     "figure(figsize=(15,10), dpi=200)\n",
     "plt.scatter(data[:,0][mask], data[:,1][mask], c=pd.Series(labels[mask]).map(color_list), s=10, alpha=0.9)"
    ]
@@ -90,6 +84,7 @@
     }
    ],
    "source": [
+    "# Plot histograms of distance of data with given mask.\n",
     "data = np.load(f'{features_dir}resnet18_cifar10_mnist_cifar100_knn.npz')['data']\n",
     "labels = np.load(f'{features_dir}resnet18_cifar10_mnist_cifar100_knn.npz')['labels']\n",
     "\n",
@@ -97,25 +92,21 @@
     "\n",
     "n_bins = 500\n",
     "\n",
-    "alpha = -0.03\n",
-    "\n",
     "figure(figsize=(15,5), dpi=200)\n",
-    "mask = (labels != -1) & (labels != -2)\n",
+    "mask = (labels != -1) & (labels != -2) # cifar10\n",
     "plt.hist(data[mask], n_bins, density=True, \n",
     "         weights=np.ones(len(data[mask])) / len(data[mask]), \n",
-    "         facecolor='#000000', alpha=0.9)\n",
+    "         facecolor='#000000', alpha=0.9) # black\n",
     "\n",
-    "mask = labels == -1\n",
+    "mask = labels == -1 # cifar100\n",
     "plt.hist(data[mask], n_bins, density=True, \n",
     "         weights=np.ones(len(data[mask])) / len(data[mask]), \n",
-    "         facecolor='#FF0000', alpha=0.8)\n",
+    "         facecolor='#FF0000', alpha=0.8) # red\n",
     "\n",
-    "mask = labels == -2\n",
+    "mask = labels == -2 # mnist\n",
     "plt.hist(data[mask], n_bins, density=True, \n",
     "         weights=np.ones(len(data[mask])) / len(data[mask]), \n",
-    "         facecolor='#ff7f0e', alpha=0.7)\n",
-    "\n",
-    "plt.savefig(f'./fig.pdf')"
+    "         facecolor='#ff7f0e', alpha=0.7) # orange"
    ]
   },
   {
