--- a/src/tb.ipynb
+++ b/src/tb.ipynb
@@ -28,6 +28,7 @@
    "source": [
     "from tensorboard import program\n",
     "\n",
+    "# Launch tensorboard to see all runs\n",
     "tb = program.TensorBoard()\n",
     "tb.configure(argv=[None, '--logdir', '../runs'])\n",
     "url = tb.launch()\n",
