add logits support in plot and reduceDim

--- a/src/plot.ipynb
+++ b/src/plot.ipynb
@@ -30,12 +30,24 @@
    "outputs": [],
    "source": [
     "# Plot data with given mask.\n",
-    "data = np.load(f'{features_dir}resnet18_cifar10_cifar100_mnist_fashionmnist_svhn_tin_tsne.npz')['features']\n",
+    "features = np.load(f'{features_dir}resnet18_cifar10_cifar100_mnist_fashionmnist_svhn_tin_tsne.npz')['features']\n",
+    "logits = np.load(f'{features_dir}resnet18_cifar10_cifar100_mnist_fashionmnist_svhn_tin_tsne.npz')['logits']\n",
     "labels = np.load(f'{features_dir}resnet18_cifar10_cifar100_mnist_fashionmnist_svhn_tin_tsne.npz')['labels']\n",
     "mask = (labels >=0) # cifar10\n",
     "\n",
     "figure(figsize=(15,10), dpi=200)\n",
-    "plt.scatter(data[:,0][mask], data[:,1][mask], c=pd.Series(labels[mask]).map(color_list), s=10, alpha=0.9)"
+    "plt.scatter(features[:,0][mask], features[:,1][mask], c=pd.Series(labels[mask]).map(color_list), s=10, alpha=0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "figure(figsize=(15,10), dpi=200)\n",
+    "plt.scatter(logits[:,0][mask], logits[:,1][mask], c=pd.Series(labels[mask]).map(color_list), s=10, alpha=0.9)"
    ]
   },
   {
@@ -46,7 +58,8 @@
    "source": [
     "# Plot histograms of distance of data with given mask.\n",
     "file = f'{features_dir}resnet18_cifar10_cifar100_mnist_fashionmnist_svhn_tin_knn.npz'\n",
-    "data = np.load(file)['features']\n",
+    "features = np.load(file)['features']\n",
+    "logits = np.load(file)['logits']\n",
     "labels = np.load(file)['labels']\n",
     "datasets = file.split('_')[1:-1]\n",
     "plt.figure(figsize=(30, 3), dpi=200)\n",
@@ -63,11 +76,11 @@
     "        mask = labels == -i\n",
     "        facecolor = color_list[-i]\n",
     "\n",
-    "    mean = np.mean(data[mask])\n",
+    "    mean = np.mean(features[mask])\n",
     "    print(mean)\n",
     "    plt.axvline(x=mean, color=facecolor)\n",
-    "    plt.hist(data[mask], n_bins, density=True, \n",
-    "            weights=np.ones(len(data[mask])) / len(data[mask]), \n",
+    "    plt.hist(features[mask], n_bins, density=True, \n",
+    "            weights=np.ones(len(features[mask])) / len(features[mask]), \n",
     "            facecolor=facecolor, alpha=0.9 - 0.1*i, label=datasets[i])\n",
     "\n",
     "plt.legend()"
@@ -78,7 +91,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "figure(figsize=(15,5), dpi=200)\n",
+    "\n",
+    "for i in range(6):\n",
+    "    if i == 0:\n",
+    "        mask = (labels >=0) # cifar10\n",
+    "        facecolor = color_list[0]\n",
+    "    else:\n",
+    "        mask = labels == -i\n",
+    "        facecolor = color_list[-i]\n",
+    "\n",
+    "    mean = np.mean(logits[mask])\n",
+    "    print(mean)\n",
+    "    plt.axvline(x=mean, color=facecolor)\n",
+    "    plt.hist(logits[mask], n_bins, density=True, \n",
+    "            weights=np.ones(len(logits[mask])) / len(logits[mask]), \n",
+    "            facecolor=facecolor, alpha=0.9 - 0.1*i, label=datasets[i])\n",
+    "\n",
+    "plt.legend()"
+   ]
   },
   {
    "cell_type": "code",
