update extaractFeatures and plot.ipynb

--- a/src/plot.ipynb
+++ b/src/plot.ipynb
@@ -19,8 +19,10 @@
    "outputs": [],
    "source": [
     "# color_list = {0: '#1f77b4', 1: '#ff7f0e', 2: '#2ca02c', 3: '#d62728', 4: '#9467bd', 5: '#8c564b', 6: '#e377c2', 7: '#7f7f7f', 8: '#bcbd22', 9: '#17becf', -1: '#000000', -2: '#ff0000', -3: '#000000', -4: '#000000', -5: '#000000'}\n",
-    "color_list = {0: 'b', 1: 'b', 2: 'b', 3: 'b', 4: 'b', 5: 'b', 6: 'b', 7: 'b', 8: 'b', 9: 'b', -1: 'g', -2: 'r', -3: 'c', -4: 'm', -5: 'k'}\n",
-    "features_dir = '../features/'"
+    "color_list = {0: 'b', 1: 'g', 2: 'r', 3: 'c', 4: 'm', 5: 'k', 6: 'k', 7: 'k', 8: 'k', }\n",
+    "plt.set_cmap('Set1')\n",
+    "features_dir = '../features/'\n",
+    "datasets = ['cifar10', 'cifar100', 'dtd', 'places365', 'svhn', 'tin', 'mnist', 'fashionmnist', 'notmnist']"
    ]
   },
   {
@@ -30,10 +32,11 @@
    "outputs": [],
    "source": [
     "# Plot data with given mask.\n",
-    "features = np.load(f'{features_dir}resnet18_cifar10_cifar100_mnist_fashionmnist_svhn_tin_tsne.npz')['features']\n",
-    "logits = np.load(f'{features_dir}resnet18_cifar10_cifar100_mnist_fashionmnist_svhn_tin_tsne.npz')['logits']\n",
-    "labels = np.load(f'{features_dir}resnet18_cifar10_cifar100_mnist_fashionmnist_svhn_tin_tsne.npz')['labels']\n",
-    "mask = (labels >=0) # cifar10\n",
+    "file = 'resnet18_cifar10_cifar100_dtd_svhn_tin_mnist_fashionmnist_notmnist_places365_tsne.npz'\n",
+    "features = np.load(f'{features_dir}{file}')['features']\n",
+    "logits = np.load(f'{features_dir}{file}')['logits']\n",
+    "labels = np.load(f'{features_dir}{file}')['labels']\n",
+    "mask = (labels ==8) # cifar10\n",
     "\n",
     "figure(figsize=(15,10), dpi=200)\n",
     "plt.scatter(features[:,0][mask], features[:,1][mask], c=pd.Series(labels[mask]).map(color_list), s=10, alpha=0.9)"
@@ -57,31 +60,33 @@
    "outputs": [],
    "source": [
     "# Plot histograms of distance of data with given mask.\n",
-    "file = f'{features_dir}resnet18_cifar10_cifar100_mnist_fashionmnist_svhn_tin_knn.npz'\n",
-    "features = np.load(file)['features']\n",
-    "logits = np.load(file)['logits']\n",
-    "labels = np.load(file)['labels']\n",
-    "datasets = file.split('_')[1:-1]\n",
+    "confs, labels = {}, {}\n",
+    "for dataset in datasets:\n",
+    "    file = f'{features_dir}{dataset}.npz'\n",
+    "    confs[dataset] = np.load(file)['conf']\n",
+    "    labels[dataset] = np.load(file)['label']\n",
+    "\n",
     "plt.figure(figsize=(30, 3), dpi=200)\n",
     "\n",
     "n_bins = 500\n",
     "\n",
     "figure(figsize=(15,5), dpi=200)\n",
     "\n",
-    "for i in range(6):\n",
-    "    if i == 0:\n",
-    "        mask = (labels >=0) # cifar10\n",
-    "        facecolor = color_list[0]\n",
-    "    else:\n",
-    "        mask = labels == -i\n",
-    "        facecolor = color_list[-i]\n",
+    "for i, dataset in enumerate(datasets):\n",
+    "    if dataset in datasets:\n",
+    "        # if i == 0:\n",
+    "        #     mask = (labels >=0) # cifar10\n",
+    "        #     # facecolor = color_list[0]\n",
+    "        # else:\n",
+    "        #     mask = labels == -i\n",
+    "        #     # facecolor = color_list[-i]\n",
     "\n",
-    "    mean = np.mean(features[mask])\n",
-    "    print(mean)\n",
-    "    plt.axvline(x=mean, color=facecolor)\n",
-    "    plt.hist(features[mask], n_bins, density=True, \n",
-    "            weights=np.ones(len(features[mask])) / len(features[mask]), \n",
-    "            facecolor=facecolor, alpha=0.9 - 0.1*i, label=datasets[i])\n",
+    "        mean = np.mean(confs[dataset])\n",
+    "        print(mean)\n",
+    "        plt.axvline(x=mean)\n",
+    "        plt.hist(confs[dataset], n_bins, density=True, \n",
+    "                weights=np.ones(len(confs[dataset])) / len(confs[dataset]), \n",
+    "                alpha=0.9 - 0.1*i, label=dataset)\n",
     "\n",
     "plt.legend()"
    ]
