add detection measure, roc-curve, pr-cureve

--- a/src/plot.ipynb
+++ b/src/plot.ipynb
@@ -9,7 +9,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.pyplot import figure\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn import metrics"
    ]
   },
   {
@@ -59,36 +60,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot histograms of distance of data with given mask.\n",
-    "confs, labels = {}, {}\n",
-    "for dataset in datasets:\n",
-    "    file = f'{features_dir}{dataset}.npz'\n",
-    "    confs[dataset] = np.load(file)['conf']\n",
-    "    labels[dataset] = np.load(file)['label']\n",
+    "files = ['ResNet18_32x32-cifar10-cifar100', 'ResNet18_32x32-cifar10-fashionmnist', 'ResNet18_32x32-cifar10-mnist', 'ResNet18_32x32-cifar10-svhn', 'ResNet18_32x32-cifar10-tin']\n",
     "\n",
-    "plt.figure(figsize=(30, 3), dpi=200)\n",
+    "data_list = []\n",
+    "for file in files:\n",
+    "    data_list.append(np.load('../features/'+file+'.npz'))\n",
     "\n",
-    "n_bins = 500\n",
+    "roc, pr_in, pr_out = [], [], []\n",
+    "for data in data_list:\n",
+    "    roc.append(metrics.RocCurveDisplay(fpr=data['fpr'], tpr=data['tpr']))\n",
     "\n",
-    "figure(figsize=(15,5), dpi=200)\n",
+    "for data in data_list:\n",
+    "    pr_in.append(metrics.PrecisionRecallDisplay(precision=data['precision_in'], recall=data['recall_in']))\n",
     "\n",
-    "for i, dataset in enumerate(datasets):\n",
-    "    if dataset in datasets:\n",
-    "        # if i == 0:\n",
-    "        #     mask = (labels >=0) # cifar10\n",
-    "        #     # facecolor = color_list[0]\n",
-    "        # else:\n",
-    "        #     mask = labels == -i\n",
-    "        #     # facecolor = color_list[-i]\n",
-    "\n",
-    "        mean = np.mean(confs[dataset])\n",
-    "        print(mean)\n",
-    "        plt.axvline(x=mean)\n",
-    "        plt.hist(confs[dataset], n_bins, density=True, \n",
-    "                weights=np.ones(len(confs[dataset])) / len(confs[dataset]), \n",
-    "                alpha=0.9 - 0.1*i, label=dataset)\n",
-    "\n",
-    "plt.legend()"
+    "for data in data_list:\n",
+    "    pr_out.append(metrics.PrecisionRecallDisplay(precision=data['precision_out'], recall=data['recall_out']))"
    ]
   },
   {
@@ -97,24 +83,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "figure(figsize=(15,5), dpi=200)\n",
+    "fig, ax = plt.subplots(figsize=(15,10), dpi=400)\n",
+    "for i, disp in enumerate(roc):\n",
+    "    label = files[i].split('-')[-2:]\n",
+    "    disp.plot(ax=ax, label=f'roc-{label[0]}-{label[1]}')\n",
     "\n",
-    "for i in range(6):\n",
-    "    if i == 0:\n",
-    "        mask = (labels >=0) # cifar10\n",
-    "        facecolor = color_list[0]\n",
-    "    else:\n",
-    "        mask = labels == -i\n",
-    "        facecolor = color_list[-i]\n",
+    "ax.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(15,10), dpi=400)\n",
+    "for i, disp in enumerate(pr_in):\n",
+    "    label = files[i].split('-')[-2:]\n",
+    "    disp.plot(ax=ax, label=f'pr_in-{label[0]}-{label[1]}')\n",
     "\n",
-    "    mean = np.mean(logits[mask])\n",
-    "    print(mean)\n",
-    "    plt.axvline(x=mean, color=facecolor)\n",
-    "    plt.hist(logits[mask], n_bins, density=True, \n",
-    "            weights=np.ones(len(logits[mask])) / len(logits[mask]), \n",
-    "            facecolor=facecolor, alpha=0.9 - 0.1*i, label=datasets[i])\n",
+    "ax.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(15,10), dpi=400)\n",
+    "for i, disp in enumerate(pr_out):\n",
+    "    label = files[i].split('-')[-2:]\n",
+    "    disp.plot(ax=ax, label=f'pr_out-{label[0]}-{label[1]}')\n",
     "\n",
-    "plt.legend()"
+    "ax.legend()\n",
+    "plt.show()"
    ]
   },
   {
