fix naming generated files

--- a/src/plot.ipynb
+++ b/src/plot.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = ['ResNet18_32x32-cifar10-cifar100', 'ResNet18_32x32-cifar10-fashionmnist', 'ResNet18_32x32-cifar10-mnist', 'ResNet18_32x32-cifar10-svhn', 'ResNet18_32x32-cifar10-tin']\n",
+    "files = ['resnet18-mds_2-cifar10-cifar100', 'resnet18-mds_2-cifar10-fashionmnist', 'resnet18-mds_2-cifar10-mnist', 'resnet18-mds_2-cifar10-svhn', 'resnet18-mds_2-cifar10-tin', 'resnet18-mds_2-cifar10-dtd', 'resnet18-mds_2-cifar10-notmnist', 'resnet18-mds_2-cifar10-places365']\n",
     "\n",
     "data_list = []\n",
     "for file in files:\n",
