--- a/src/processData.ipynb
+++ b/src/processData.ipynb
@@ -9,39 +9,8 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "df = pd.read_csv('../features/ood__.csv',delimiter=',')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "base         object\n",
-       "FPR@95      float64\n",
-       "AUROC       float64\n",
-       "AUPR_IN     float64\n",
-       "AUPR_OUT    float64\n",
-       "CCR_4       float64\n",
-       "CCR_3       float64\n",
-       "CCR_2       float64\n",
-       "CCR_1       float64\n",
-       "ACC         float64\n",
-       "ERROR       float64\n",
-       "DELTA       float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.dtypes\n"
+    "df = pd.read_csv('../features/ood.csv',delimiter=',') # resnet18\n",
+    "# df = pd.read_csv('../features/ood_.csv',delimiter=',') # lenet5"
    ]
   },
   {
@@ -61,7 +30,7 @@
     "df['base'].mask(df['base'] == 'places365', 'Places365', inplace=True)\n",
     "df['base'].mask(df['base'] == 'near', 'Near-OOD', inplace=True)\n",
     "df['base'].mask(df['base'] == 'far', 'Far-OOD', inplace=True)\n",
-    "# df['base'].mask(df['base'] == 'mean', 'średnia', inplace=True)\n",
+    "df['base'].mask(df['base'] == 'mean', 'średnia', inplace=True)\n",
     "df['base'].mask(df['base'] == 'cifar10', 'CIFAR-10', inplace=True)\n"
    ]
   },
@@ -72,11 +41,8 @@
    "outputs": [],
    "source": [
     "headers = ['base','FPR@95','AUROC','AUPR IN','AUPR OUT','CCR 4','CCR 3','CCR 2','CCR 1','ACC','ERROR','DELTA']\n",
-    "# headers = ['base','FPR@95','AUROC','AUPR_IN','AUPR_OUT','CCR_4','CCR_3','CCR_2','CCR_1','ACC','ERROR','DELTA']\n",
-    "# df.iloc[:len(df)//2] .to_csv('../features/oodp1.csv', float_format='%.6f', index=False, header=headers)\n",
-    "# df.iloc[len(df)//2:] .to_csv('../features/oodp2.csv', float_format='%.6f', index=False, header=headers)\n",
-    "df.to_csv('../features/ood__2.csv', index=False, header=headers)\n",
-    "# df.to_csv('../features/ood__.csv', index=False, header=headers)"
+    "df.to_csv('../features/ood2.csv', index=False, header=headers) # resnet18\n",
+    "# df.to_csv('../features/ood__.csv', index=False, header=headers) #lenet5"
    ]
   },
   {
